--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -224,19 +224,19 @@ $include-html-global-classes: $include-html-classes;
  $header-font-family: 'Cinzel', Trajan, Serif;
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
- $header-font-color: $secondary-color;
+ $header-font-color: $primary-color;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
- $h1-font-size: rem-calc(28);
- $h2-font-size: rem-calc(26);
- $h3-font-size: rem-calc(24);
- $h4-font-size: rem-calc(18);
- $h5-font-size: rem-calc(12);
- $h6-font-size: 1rem;
+// $h1-font-size: rem-calc(44);
+// $h2-font-size: rem-calc(37);
+// $h3-font-size: rem-calc(27);
+// $h4-font-size: rem-calc(23);
+// $h5-font-size: rem-calc(18);
+// $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
 // $h1-font-reduction: rem-calc(10) !default;
@@ -281,7 +281,7 @@ $include-html-global-classes: $include-html-classes;
 // We use these to style anchors
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
- $anchor-font-color: $secondary-color;
+ $anchor-font-color: $primary-color;
  $anchor-font-color-hover: scale-color($anchor-font-color, $lightness: -14%);
 
 // We use these to style the <hr> element
@@ -1293,8 +1293,8 @@ $include-html-global-classes: $include-html-classes;
  $include-html-table-classes: true;
 
 // These control the background color for the table and even rows
- $table-bg: scale-color($secondary-color, $lightness: 95%);
- $table-even-row-bg: scale-color($table-bg, $lightness: 5%);
+ $table-bg: scale-color($secondary-color, $lightness: 90%);
+ $table-even-row-bg: scale-color($table-bg, $lightness: 10%);
 
 // These control the table cell border style
 // $table-border-style: solid;
