--- a/woocommerce/_woocommerce.scss
+++ b/woocommerce/_woocommerce.scss
@@ -132,18 +132,19 @@ body.pre-teen.parent ul.products {
 		}
 	}
 	h4 {
-		margin-top: .25em; // prevent image overlap
+		padding-top: .5em; // prevent image overlap
 		position: relative;
 		text-align: center;
+		white-space: nowrap;
 		z-index: 4;
 	}
 }
 
 body.shop .product-category {
-	&.adults a { background: $grey; border-color: $grey; }
-	&.childrens a { background: $pink; border-color: $pink; }
-	&.pre-teen a{  background: $purple; border-color: $purple; }
-	&.replacement-chains a { background: $green; border-color: $green; }
+	&.adults a, &.adults h4 { background: $grey; border-color: $grey; }
+	&.childrens a, &.childrens h4 { background: $pink; border-color: $pink; }
+	&.pre-teen a, &.pre-teen h4 { background: $purple; border-color: $purple; }
+	&.replacement-chains a, &.replacement-chains h4 { background: $green; border-color: $green; }
 }
 
 
@@ -156,7 +157,7 @@ li.product {
 		@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
 		overflow: hidden;
 		&:hover {
-			background-size: 150%;
+			background-size: 140%;
 			opacity: .80;
 		}
 	}
