--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -1387,11 +1387,11 @@ $include-html-global-classes: $include-html-classes;
  $include-html-top-bar-classes: true;
 
 // Background color for the top bar
- $topbar-bg-color: $primary-color;
- $topbar-bg: $topbar-bg-color;
+ $topbar-bg-color: $secondary-color;
+ $topbar-bg: $white;
 
 // Height and margin
- $topbar-height: rem-calc(65);
+ $topbar-height: rem-calc(45);
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
@@ -1399,17 +1399,17 @@ $include-html-global-classes: $include-html-classes;
 // $topbar-title-font-size: rem-calc(17);
 
 // Set the link colors and styles for top-level nav
- $topbar-link-color: $white;
-// $topbar-link-color-hover: $white;
+ $topbar-link-color: $primary-color;
+ $topbar-link-color-hover: $white;
 // $topbar-link-color-active: $white;
 // $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
- $topbar-link-bg: $topbar-bg;
- $topbar-link-bg-color-hover: scale-color($topbar-link-bg, $lightness: -20%);
- $topbar-link-bg-hover: scale-color($topbar-link-bg, $lightness: -20%);
- $topbar-link-bg-active: scale-color($topbar-link-bg-color-hover, $lightness: -20%);
+ $topbar-link-bg: transparent;
+ $topbar-link-bg-color-hover: $secondary-color;
+ $topbar-link-bg-hover: $secondary-color;
+ $topbar-link-bg-active: $secondary-color;
  $topbar-link-bg-active-hover: scale-color($topbar-link-bg-active, $lightness: -20%);
 // $topbar-link-font-family: $body-font-family;
 // $topbar-link-text-transform: none;
@@ -1421,19 +1421,19 @@ $include-html-global-classes: $include-html-classes;
 // $topbar-button-top: 7px;
 
 // Style the top bar dropdown elements
- $topbar-dropdown-bg: $topbar-bg-color;
- $topbar-dropdown-link-color: $topbar-link-color;
- $topbar-dropdown-link-bg: $topbar-dropdown-bg;
+ $topbar-dropdown-bg: transparent;
+ $topbar-dropdown-link-color: $topbar-link-color-hover;
+ $topbar-dropdown-link-bg: $topbar-link-bg-color-hover;
 // $topbar-dropdown-link-weight: $font-weight-normal;
 // $topbar-dropdown-toggle-size: 5px;
-// $topbar-dropdown-toggle-color: $white;
-// $topbar-dropdown-toggle-alpha: 0.4;
+ $topbar-dropdown-toggle-color: $topbar-link-color;
+ $topbar-dropdown-toggle-alpha: 1;
 
- $topbar-dropdown-label-color: $white;
+ $topbar-dropdown-label-color: $topbar-link-color-hover;
 // $topbar-dropdown-label-text-transform: uppercase;
 // $topbar-dropdown-label-font-weight: $font-weight-bold;
 // $topbar-dropdown-label-font-size: rem-calc(10);
-// $topbar-dropdown-label-bg: $oil;
+ $topbar-dropdown-label-bg: $topbar-link-bg-color-hover;
 
 // Top menu icon styles
 // $topbar-menu-link-transform: uppercase;
