--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -341,7 +341,7 @@ $include-html-global-classes: $include-html-classes;
 // 01. Accordion
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-accordion-classes: $include-html-classes;
+ $include-html-accordion-classes: false;
 
 // $accordion-navigation-padding: rem-calc(16);
  $accordion-navigation-bg-color: scale-color($primary-color, $lightness: 10%);
@@ -503,7 +503,7 @@ $include-html-global-classes: $include-html-classes;
 // 07. Clearing
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-clearing-classes: $include-html-classes;
+ $include-html-clearing-classes: false;
 
 // We use these to set the background colors for parts of Clearing.
 // $clearing-bg: $oil;
@@ -533,7 +533,7 @@ $include-html-global-classes: $include-html-classes;
 // 08. Dropdown
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-dropdown-classes: $include-html-classes;
+ $include-html-dropdown-classes: false;
 
 // We use these to controls height and width styles.
 // $f-dropdown-max-width: 200px;
@@ -622,7 +622,7 @@ $include-html-global-classes: $include-html-classes;
 // 10. Flex Video
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-media-classes: $include-html-classes;
+ $include-html-media-classes: false;
 
 // We use these to control video container padding and margins
 // $flex-video-padding-top: rem-calc(25);
@@ -708,7 +708,7 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to style the icon-bar and items
-// $include-html-icon-bar-classes: $include-html-classes;
+ $include-html-icon-bar-classes: false;
 // $icon-bar-bg: $oil;
 // $icon-bar-font-color: $white;
 // $icon-bar-font-size: 1rem;
@@ -746,7 +746,7 @@ $include-html-global-classes: $include-html-classes;
 // 14. Joyride
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-joyride-classes: $include-html-classes;
+ $include-html-joyride-classes: false;
 
 // Controlling default Joyride styles
 // $joyride-tip-bg: $oil;
@@ -780,7 +780,7 @@ $include-html-global-classes: $include-html-classes;
 // 15. Keystrokes
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-keystroke-classes: $include-html-classes;
+ $include-html-keystroke-classes: false;
 
 // We use these to control text styles.
 // $keystroke-font: "Consolas", "Menlo", "Courier", monospace;
@@ -802,7 +802,7 @@ $include-html-global-classes: $include-html-classes;
 // 16. Labels
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-label-classes: $include-html-classes;
+ $include-html-label-classes: false;
 
 // We use these to style the labels
 // $label-padding: rem-calc(4 8 4);
@@ -818,7 +818,7 @@ $include-html-global-classes: $include-html-classes;
 // 17. Magellan
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-magellan-classes: $include-html-classes;
+ $include-html-magellan-classes: false;
 
 // $magellan-bg: $white;
 // $magellan-padding: 0 !important;
@@ -898,7 +898,7 @@ $include-html-global-classes: $include-html-classes;
 // 19. Orbit
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-orbit-classes: $include-html-classes;
+ $include-html-orbit-classes: false;
 
 // We use these to control the caption styles
 // $orbit-container-bg: none;
@@ -999,7 +999,7 @@ $include-html-global-classes: $include-html-classes;
 // 22. Pricing Tables
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-pricing-classes: $include-html-classes;
+ $include-html-pricing-classes: false;
 
 // We use this to control the border color
  $price-table-border: solid 1px $primary-color;
@@ -1076,7 +1076,7 @@ $include-html-global-classes: $include-html-classes;
 // 24. Range Slider
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-range-slider-classes: $include-html-classes;
+ $include-html-range-slider-classes: false;
 
 // These variables define the slider bar styles
 // $range-slider-bar-width: 100%;
@@ -1109,7 +1109,7 @@ $include-html-global-classes: $include-html-classes;
 // 25. Reveal
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-reveal-classes: $include-html-classes;
+ $include-html-reveal-classes: false;
 
 // We use these to control the style of the reveal overlay.
 // $reveal-overlay-bg: rgba($black, .45);
@@ -1322,7 +1322,7 @@ $include-html-global-classes: $include-html-classes;
 // 31. Tabs
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-tabs-classes: $include-html-classes;
+ $include-html-tabs-classes: false;
 
 // $tabs-navigation-padding: rem-calc(16);
  $tabs-navigation-bg-color: scale-color($primary-color, $lightness: 10%);
@@ -1357,7 +1357,7 @@ $include-html-global-classes: $include-html-classes;
 // 33. Tooltips
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $include-html-tooltip-classes: $include-html-classes;
+ $include-html-tooltip-classes: false;
 
 // $has-tip-border-bottom: dotted 1px $iron;
 // $has-tip-font-weight: $font-weight-bold;
