--- a/woocommerce/_woocommerce.scss
+++ b/woocommerce/_woocommerce.scss
@@ -8,8 +8,7 @@ html, body {
 .woocommerce-breadcrumb {
 	@include crumb-container;
 	text-align: center;
-	margin: 0 0 1rem;
-	position: relative;
+	margin: 0;
 	li {
 		@include crumbs;
 		display: inline;
@@ -115,16 +114,19 @@ body.pre-teen.parent ul.products {
 	a {
 		background: $white;
 		border: .5em solid $white;
+		box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
 		display: block;
 		margin: 1rem auto;
 		overflow: hidden;
 		position: relative;
+		@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
 		text-align: center;
 		img {
 			@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
 			z-index: 2;
 		}
 		&:hover {
+			box-shadow: 0px -5px 10px 0px rgba(0,0,0,.5);
 			img {
 				opacity: .80;
 				transform: scale(1.1);
@@ -150,60 +152,146 @@ body.shop .product-category {
 
 /**** products ****/
 li.product {
-	color: $primary-color;
-	position: relative;
+	perspective: 600px;
 	.square-thumb {
+		box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+		backface-visibility: hidden;
 		border: 2px solid $tan;
-		@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
 		overflow: hidden;
-		&:hover {
-			background-size: 140%;
-			opacity: .80;
-		}
+		@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
+		transform-origin: bottom;
+	}
+	&:hover .square-thumb {
+		box-shadow: 0px -10px 10px -10px rgba(0,0,0,.5);
+		transform: rotateX(-20deg);
+		-webkit-transform: rotateX(-20deg);
+	}
+	h5 {
+		backface-visibility: hidden;
+		color: $white;
+		display: inline-block;
+		height: 100%;
+		margin-bottom: 0;
+		@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
+		text-align: center;
+		width: 100%;
 	}
 	.product-info {
 		background-color: $tan;
-		overflow: auto;
-	}
-	h5 {
 		border-bottom: 1px solid $white;
-		margin-bottom: 0;
-		text-align: center;
-	}
-	span.price {
-		float: left;
-		margin-left: 1rem;
-	}
-	.add_to_cart_button, .added_to_cart {
-		background: none;
-		display: inline;
-		font-size: 0;
-		margin: 0;
-		padding: 0;
-		position: absolute;
-		bottom: 22px;
-		right: 2px;
-		&::after {
-			color: $primary-color;
-			content: $fa-var-shopping-cart;
-			font-size: 1rem;
-			font-family: FontAwesome;
-			margin-right: 1rem;
+		overflow: hidden;
+		position: relative;
+		a {
+			backface-visibility: hidden;
+			display: block;
+			height: 2rem;
+			overflow: hidden;
+			position: relative;
+			&::before {
+				color: $white;
+				content: $fa-var-search;
+				font-family: FontAwesome;
+				height: 100%;
+				@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
+				left: 0;
+				position: absolute;
+				text-align: center;
+				bottom: -100%;
+				width: 100%;
+			}
+			&:hover {
+				h5 {
+					transform: translateY(-300%);	
+				}
+				&::before {
+					bottom: 0;	
+				}
+			}
 		}
 	}
-	&.added, &.added::after {
+	a.square-thumb {
+		&:hover {
+			&~.product-info h5 {
+				transform: translateY(-300%);
+			}
+			&~.product-info a::before {
+				bottom: 0;	
+			}
+		}
+	}
+	span.price {
 		display: none;
 	}
-	.added_to_cart::after {
-		color: $success-color;
-		content: $fa-var-bookmark;
+	.add_to_cart_button {
+		backface-visibility: hidden;
+		background: $secondary-color;
+		color: $white;
+		display: block;
+		height: 2rem;
+		overflow: hidden;
+		position: relative;
+		&.added {
+			display: none;
+		}
+		&:active {
+			background: scale-color($success-color, $lightness: -20%);
+			top: 2px;
+		}
+		&::before {
+			color: $white;
+			content: $fa-var-shopping-cart;
+			font-family: FontAwesome;
+			height: 100%;
+			@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
+			left: 0;
+			position: absolute;
+			text-align: center;
+			top: -100%;
+			width: 100%;
+		}
+		&:active::before {
+			color: scale-color($success-color, $lightness: -60%);
+		}
+		&:hover {
+			h5 {
+				transform: translateY(300%);	
+			}
+			&::before {
+				top: 0;	
+			}
+		}
+	}
+	.added_to_cart {
+		backface-visibility: hidden;
+		background: $success-color;
+		color: $white;
+		display: block;
+		height: 2rem;
+		overflow: hidden;
+		position: relative;
+		text-transform: uppercase;
+		&::after {
+			color: $white;
+			content: $fa-var-long-arrow-right;
+			font-family: FontAwesome;
+			margin-left: .25rem;
+			opacity: 0;
+			@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
+			top: 0;
+		}
+		&:hover::after {
+			margin-left: 1rem;
+			opacity: 1;
+		}
 	}
 }
+
+
 li.product.product_cat-adults {
 	.square-thumb {
 		border: 2px solid $grey;
 	}
-	.product-info {
+	.product-info, .add_to_cart_button {
 		background: $grey;
 	}
 }
@@ -211,7 +299,7 @@ li.product.product_cat-childrens {
 	.square-thumb {
 		border: 2px solid $pink;
 	}
-	.product-info {
+	.product-info, .add_to_cart_button {
 		background: $pink;
 	}
 }
@@ -219,7 +307,7 @@ li.product.product_cat-pre-teen {
 	.square-thumb {
 		border: 2px solid $purple;
 	}
-	.product-info {
+	.product-info, .add_to_cart_button {
 		background: $purple;
 	}
 }
@@ -227,7 +315,7 @@ li.product.product_cat-replacement-chains {
 	.square-thumb {
 		border: 2px solid $green;
 	}
-	.product-info {
+	.product-info, .add_to_cart_button {
 		background: $green;
 	}
 }
@@ -242,7 +330,10 @@ li.product.product_cat-replacement-chains {
 	margin-top: 1rem;
 }
 
-// Quadruple upsell size because parent is going to be 1/4 the size
+.upsells {
+	margin-top: 1rem;
+}
+
 .upsells .products {
 	@media #{$medium-up} {
 		@include block-grid(2);
@@ -251,15 +342,26 @@ li.product.product_cat-replacement-chains {
 
 /***** single-product ****/
 form.cart  {
-	@include grid-row;
 	.quantity {
-		@include grid-column(8);
+		float: left;
+		input {
+			padding-left: 1rem;
+			padding-right: 1rem;
+			max-width: 4rem;
+		}
 	}
 	.single_add_to_cart_button {
 		@include button-size($padding:$button-tny);
-		@include grid-column(4);
+	}
+	h4 {
+		clear: both;	
 	}
 }
+
+.thumbnails {
+	margin-top: 1rem;
+}
+
 /***** Cart *****/
 .cart {
 	.actions {
@@ -331,5 +433,13 @@ form.cart  {
 				content: $fa-var-check-square-o;
 			}
 		}
+	}
+}
+
+/**** Store Notices ****/
+.alert-box {
+	
+	i {
+		margin-right: 1rem;	
 	}
 }
