Added Back Link to success notice

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -726,7 +726,7 @@ li.comment > section {
 	font-family: $header-font-family;
 	font-size: .8em;
 	text-transform: uppercase;
-	margin-top: 20px;
+	margin-top: 600px; // gets changed by .js
 	text-align: center;
 	width: 100%;
 	.footer-content {
