--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -641,26 +641,28 @@ $include-html-global-classes: $include-html-classes;
 // $form-spacing: rem-calc(16);
 
 // We use these to style the labels in different ways
-// $form-label-pointer: pointer;
-// $form-label-font-size: rem-calc(14);
-// $form-label-font-weight: $font-weight-normal;
-// $form-label-line-height: 1.5;
-// $form-label-font-color: scale-color($black, $lightness: 30%);
-// $form-label-small-transform: capitalize;
-// $form-label-bottom-margin: 0;
-// $input-font-family: inherit;
-// $input-font-color: rgba(0,0,0,0.75);
-// $input-font-size: rem-calc(14);
-// $input-bg-color: $white;
-// $input-focus-bg-color: scale-color($white, $lightness: -2%);
-// $input-border-color: scale-color($white, $lightness: -20%);
-// $input-focus-border-color: scale-color($white, $lightness: -40%);
-// $input-border-style: solid;
-// $input-border-width: 1px;
-// $input-border-radius: $global-radius;
-// $input-disabled-bg: $gainsboro;
-// $input-disabled-cursor: $cursor-default-value;
-// $input-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+//$form-label-pointer: pointer !default;
+//$form-label-font-size: rem-calc(14) !default;
+//$form-label-font-weight: $font-weight-normal !default;
+//$form-label-line-height: 1.5 !default;
+//$form-label-font-color: scale-color($black, $lightness: 30%) !default;
+//$form-label-small-transform: capitalize !default;
+//$form-label-bottom-margin: 0 !default;
+//$input-font-family: inherit !default;
+//$input-font-color: rgba(0,0,0,0.75) !default;
+$input-placeholder-font-color: black;
+//$input-font-size: rem-calc(14) !default;
+//$input-bg-color: $white !default;
+//$input-focus-bg-color: scale-color($white, $lightness: -2%) !default;
+//$input-border-color: scale-color($white, $lightness: -20%) !default;
+//$input-focus-border-color: scale-color($white, $lightness: -40%) !default;
+//$input-border-style: solid !default;
+//$input-border-width: 1px !default;
+//$input-border-radius: $global-radius !default;
+//$input-disabled-bg: $gainsboro !default;
+//$input-disabled-cursor: $cursor-default-value !default;
+//$input-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1) !default;
+//$input-include-glowing-effect: false !default;
 
 // We use these to style the fieldset border and spacing.
  $fieldset-border-style: none;
