--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -92,6 +92,7 @@ button, .button, input[type="submit"], a {
 		.column-#{$i} {
 			column-count: $i;
 			column-gap: 1rem;
+			list-style-position: inside;
 		}
 	}
 }
@@ -201,7 +202,7 @@ nav.top-bar, nav.second-bar {
 			top: 0;
 		}
 	}
-	ul.dropdown, ul.dropdown li:last-child, ul.dropdown li:last-child a {
+	ul.dropdown, ul.dropdown li:last-child, ul.dropdown li:last-child > a {
 		-webkit-border-bottom-left-radius: 1em;
 		-moz-border-radius-bottomleft: 1em;
 		border-bottom-left-radius: 1em;
