Removed content-product template in favor of filters

--- a/woocommerce/_woocommerce.scss
+++ b/woocommerce/_woocommerce.scss
@@ -175,10 +175,11 @@ li.product {
 		transform: rotateX(-20deg);
 		-webkit-transform: rotateX(-20deg);
 	}
-	h5 {
+	h3 {
 		backface-visibility: hidden;
 		color: $primary-color;
 		display: inline-block;
+		font-size: $h5-font-size;
 		height: 100%;
 		margin-bottom: 0;
 		@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
@@ -198,7 +199,7 @@ li.product {
 			position: relative;
 			&::before {
 				color: $primary-color;
-				content: 'View Details';
+				content: 'VIEW DETAILS';
 				height: 100%;
 				@include single-transition($property:all, $speed:200ms, $ease:ease-in-out);
 				left: 0;
@@ -208,7 +209,7 @@ li.product {
 				width: 100%;
 			}
 			&:hover {
-				h5 {
+				h3 {
 					transform: translateY(-300%);
 				}
 				&::before {
@@ -219,7 +220,7 @@ li.product {
 	}
 	a.square-thumb {
 		&:hover {
-			&~.product-info h5 {
+			&~.product-info h3 {
 				transform: translateY(-300%);
 			}
 			&~.product-info a::before {
@@ -240,6 +241,7 @@ li.product {
 		display: block;
 		height: 2rem;
 		overflow: hidden;
+		padding: 0; //remove padding from .button
 		position: relative;
 		&.added {
 			display: none;
@@ -264,7 +266,7 @@ li.product {
 			color: scale-color($success-color, $lightness: -60%);
 		}
 		&:hover {
-			h5 {
+			h3 {
 				transform: translateY(300%);
 			}
 			&::before {
