--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:     upandup-Marathon
+Theme Name:     upandup-Jewelmark
 Template:       groundup
 Theme URI:      http://ascottmccauley.com
 Description:    A Performance and Security Oriented WordPress Theme
