--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -1124,7 +1124,7 @@ $input-placeholder-font-color: black;
 // 25. Reveal
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
- $include-html-reveal-classes: false;
+ $include-html-reveal-classes: true;
 
 // We use these to control the style of the reveal overlay.
 // $reveal-overlay-bg: rgba($black, .45);
